Fix for Bug#37281 Time stamps in Falcon on big-endian machine give wrong results

The server expects timestamps to be returned on little-endian format while Falcon
returned these on big-endian format on big-endian machines. Change to use a call-back
to server code for storing timestamps when returning the results. The server code
handles the conversion from big-endian to little-endian.